monticore-generator/src/test/resources/cocos/invalid/A4056/A4056.mc4
package cocos.invalid.A4056;

grammar A4056 {

  A = (A "*" A);

}
